# k8s-resource-advisor

./: README  pyproject.toml  redme.md
src/: main.py  requirements.txt
src/analyzers/: profiler.py  stats.py
src/calculators/: hpa.py  resources.py
src/collectors/: datadog.py  github.py
src/config/: settings.example.yaml
src/reporters/: html_rerport.py  report.html  report.py  yaml_gen.py
src/tools/: mock_data.py
