[tool.poetry]
name = "k8s-resource-advisor"
version = "0.1.0"
description = "Recomendações automáticas de resources e HPA para Kubernetes via GitHub + Datadog"
authors = []
readme = "README.md"
packages = [
    { include = "collectors" },
    { include = "analyzers" },
    { include = "calculators" },
    { include = "reporters" },
]

[tool.poetry.scripts]
advisor = "main:cli"

[tool.poetry.dependencies]
python = ">=3.10"
datadog-api-client = ">=2.20.0"
PyYAML = ">=6.0"
click = ">=8.1"
pandas = ">=2.0"
numpy = ">=1.24"
jinja2 = ">=3.1"
rich = ">=13.0"
python-dotenv = ">=1.0"
requests = ">=2.31"
matplotlib = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"